SC_FOG: Fog-hidden water: To prevent info leak, SOCBoardAtServer.makeNewBoard_hideHexesInFog add nodes/edges to legal sets; SOCPlayer +updatePotentialsAndLegalsAroundRevealedHex; SOCBoardLarge +getAdjacentEdgesToHex_arr, isEdgeLegalRoad; misc javadocs